modal-z-index-fix

--- a/css/ficha-producto.css
+++ b/css/ficha-producto.css
@@ -288,6 +288,7 @@ button {
   opacity: 1;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  z-index: 100;
 }
 
 .modal.is-active .modal-card {
